--- a/ToRenameUI/ToRenameUI.csproj
+++ b/ToRenameUI/ToRenameUI.csproj
@@ -7,4 +7,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ToRename.BLL\ToRename.BLL.csproj" />
+  </ItemGroup>
+
 </Project>
